<resources>
    <string name="app_name">Software Engineering</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>


    <!-- String values for the main screen -->
    <string name="marketplace">MarketPlace</string>
    <string name="minigame">Mini-Game</string>
    <string name="inventory">Inventory</string>


    <!-- String values for the TapGame interface -->
    <string name="tapButton">TAP</string>
    <string name="zero">0</string>
    <string name="backButton">Exit Game</string>


    <!-- String related to MarketPlace Activity -->
    <string name="buy_house">House</string>
    <string name="buy_car">Car</string>
    <string name="buy_bread">Bread</string>
    <string name="buy_water">Water</string>
    <string name="buy_chicken">Chicken</string>
    <string name="buy_enchilada">Spicy Enchilada</string>
    <string name="buy_PubSub">Pub Sub</string>

    <string name="house_price">10</string>
    <string name="car_price">5</string>
    <string name="bread_price">1</string>
    <string name="water_price">1</string>
    <string name="chicken_price">5</string>
    <string name="enchilada_price">10</string>
    <string name="pubSub_price">10</string>
    <string name="prices">Prices</string>
    <string name="products">Products</string>

    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="signin">Sign-In</string>
    <string name="register">Register</string>
    <string name="drinkname">Drink Name</string>
    <string name="review">Review</string>
    <string name="submit">Submit</string>
    <string name="one">1</string>
    <string name="ten">10</string>
    <string name="typeOfDrink">Type of Drink</string>
    <string name="abv">Alcohol by Volume</string>
    <string name="addDrink">Add a New Drink</string>

</resources>
